Added attribute handling